--- a/README.rdoc
+++ b/README.rdoc
@@ -35,5 +35,29 @@
 
 * open a web brower and go to http://localhost:3000   
 
+== Problems
 
+ It appears that after several minutes or so of pulses over all planes, 
+ the clients no longer get the faye subscriptions. 
+ Restarting the event machine engine fixes this, so
+ it may be tied to that or something specific to the windows environment.
+
+ rake start_processes machine=win 
+ causes the the event machine engine to get restarted
+ automatically every few minutes, but I am not sure if that
+ fixes it quite yet since it is launched as a child process.  
+ 
+ rake start_processes em=false
+ causes the rails server and vehicle engine to start, but not
+ the event machine service. If you do that, you can the start, kill and restart
+ the event machine in a seperate window which does work. The command to do that is:
+ 
+ $ ruby lib\update_map_svc.rb 
+  
+ I may try to get this app to run on JRuby and see if that has the same problem or not.
+  
+   
+ 
+ 
+ 
 
